Deprecated constructors → valueOf().