@@ -54,11 +54,11 @@ public class Data implements Cloneable {
 		if (value == null) {
 			valCopy = null;
 		} else if (value instanceof Integer) {
-			valCopy = new Integer(((Integer) value).intValue());
+			valCopy = Integer.valueOf(((Integer) value).intValue());
 		} else if (value instanceof Float) {
-			valCopy = new Float(((Float) value).floatValue());
+			valCopy = Float.valueOf(((Float) value).floatValue());
 		} else if (value instanceof Boolean) {
-			valCopy = new Boolean(((Boolean) value).booleanValue());
+			valCopy = Boolean.valueOf(((Boolean) value).booleanValue());
 		} else if (value instanceof String) {
 			valCopy = new String(value.toString());
 		}
