@@ -3,7 +3,6 @@ package net.logicsquad.pal;
 import java.io.BufferedReader;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
-import java.io.FileReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -221,7 +220,7 @@ public class PAL {
 				returnPoint = dataStack.get(dataStack.getTop()
 						- currInst.getFirst() - 2);
 				returnPoint.setType(Data.INT);
-				returnPoint.setValue(new Integer(pc));
+				returnPoint.setValue(Integer.valueOf(pc));
 
 				// Set new frame base.
 				dataStack.setBase(dataStack.getTop() - currInst.getFirst());
@@ -312,7 +311,7 @@ public class PAL {
 				// Load a real constant onto the stack.
 
 				if (o instanceof Integer) {
-					o = new Float(((Integer) o).floatValue());
+					o = Float.valueOf(((Integer) o).floatValue());
 				}
 
 				if (!(o instanceof Float)) {
@@ -353,7 +352,7 @@ public class PAL {
 				int address = dataStack.getAddress(currInst.getFirst(),
 						((Integer) o).intValue());
 
-				dataStack.push(new Data(Data.INT, new Integer(address)));
+				dataStack.push(new Data(Data.INT, Integer.valueOf(address)));
 
 				break;
 			case Mnemonic.LDI:
@@ -432,7 +431,7 @@ public class PAL {
 					loadedVal = dataStack.get(currInst.getFirst(),
 							((Integer) o).intValue());
 					loadedVal.setType(Data.INT);
-					loadedVal.setValue(new Integer(intVal));
+					loadedVal.setValue(Integer.valueOf(intVal));
 				} catch (IOException e1) {
 					System.err.println(e1);
 				} catch (NumberFormatException e2) {
@@ -463,7 +462,7 @@ public class PAL {
 					loadedVal = dataStack.get(currInst.getFirst(),
 							((Integer) o).intValue());
 					loadedVal.setType(Data.REAL);
-					loadedVal.setValue(new Float(realVal));
+					loadedVal.setValue(Float.valueOf(realVal));
 				} catch (IOException e1) {
 					System.err.println(e1);
 				} catch (NumberFormatException e2) {
@@ -512,7 +511,7 @@ public class PAL {
 					// simple way to achieve this is to nullify the
 					// current exception handler pointer.
 					Data handlerLocation = dataStack.get(0, -1);
-					handlerLocation.setValue(new Integer(0));
+					handlerLocation.setValue(Integer.valueOf(0));
 				}
 
 				// Raise the exception...
@@ -652,10 +651,10 @@ public class PAL {
 			tos = dataStack.peek();
 			if (tos.getType() == Data.INT) {
 				int oldValue = ((Integer) tos.getValue()).intValue();
-				tos.setValue(new Integer(-oldValue));
+				tos.setValue(Integer.valueOf(-oldValue));
 			} else if (tos.getType() == Data.REAL) {
 				float oldValue = ((Float) tos.getValue()).floatValue();
-				tos.setValue(new Float(-oldValue));
+				tos.setValue(Float.valueOf(-oldValue));
 			} else {
 				error(currInst, "Cannot negate boolean, string or UNDEF value.");
 				return ExitStatus.ABNORMAL;
@@ -691,15 +690,15 @@ public class PAL {
 					int int2 = ((Integer) tos.getValue()).intValue();
 					switch (opr) {
 					case 3:
-						dataStack.push(new Data(Data.INT, new Integer(int1
+						dataStack.push(new Data(Data.INT, Integer.valueOf(int1
 								+ int2)));
 						break;
 					case 4:
-						dataStack.push(new Data(Data.INT, new Integer(int1
+						dataStack.push(new Data(Data.INT, Integer.valueOf(int1
 								- int2)));
 						break;
 					case 5:
-						dataStack.push(new Data(Data.INT, new Integer(int1
+						dataStack.push(new Data(Data.INT, Integer.valueOf(int1
 								* int2)));
 						break;
 					case 6:
@@ -710,7 +709,7 @@ public class PAL {
 							return ExitStatus.ABNORMAL;
 						}
 
-						dataStack.push(new Data(Data.INT, new Integer(int1
+						dataStack.push(new Data(Data.INT, Integer.valueOf(int1
 								/ int2)));
 						break;
 					default:
@@ -720,15 +719,15 @@ public class PAL {
 					float flt2 = ((Float) tos.getValue()).floatValue();
 					switch (opr) {
 					case 3:
-						dataStack.push(new Data(Data.REAL, new Float(flt1
+						dataStack.push(new Data(Data.REAL, Float.valueOf(flt1
 								+ flt2)));
 						break;
 					case 4:
-						dataStack.push(new Data(Data.REAL, new Float(flt1
+						dataStack.push(new Data(Data.REAL, Float.valueOf(flt1
 								- flt2)));
 						break;
 					case 5:
-						dataStack.push(new Data(Data.REAL, new Float(flt1
+						dataStack.push(new Data(Data.REAL, Float.valueOf(flt1
 								* flt2)));
 						break;
 					case 6:
@@ -739,7 +738,7 @@ public class PAL {
 							return ExitStatus.ABNORMAL;
 						}
 
-						dataStack.push(new Data(Data.REAL, new Float(flt1
+						dataStack.push(new Data(Data.REAL, Float.valueOf(flt1
 								/ flt2)));
 						break;
 					default:
@@ -767,11 +766,11 @@ public class PAL {
 			if (baseType == Data.INT) {
 				int base = ((Integer) ntos.getValue()).intValue();
 				int intAnswer = (int) Math.pow(base, exponent);
-				dataStack.push(new Data(Data.INT, new Integer(intAnswer)));
+				dataStack.push(new Data(Data.INT, Integer.valueOf(intAnswer)));
 			} else {
 				float base = ((Float) ntos.getValue()).floatValue();
 				float floatAnswer = (float) Math.pow(base, exponent);
-				dataStack.push(new Data(Data.REAL, new Float(floatAnswer)));
+				dataStack.push(new Data(Data.REAL, Float.valueOf(floatAnswer)));
 			}
 			break;
 		case 8:
@@ -801,9 +800,9 @@ public class PAL {
 				// NB the % operator will give a negative for a
 				// negative number.
 				if (Math.abs(((Integer) tos.getValue()).intValue() % 2) == 1) {
-					dataStack.push(new Data(Data.BOOL, new Boolean(true)));
+					dataStack.push(new Data(Data.BOOL, Boolean.valueOf(true)));
 				} else {
-					dataStack.push(new Data(Data.BOOL, new Boolean(false)));
+					dataStack.push(new Data(Data.BOOL, Boolean.valueOf(false)));
 				}
 			}
 			break;
@@ -839,27 +838,27 @@ public class PAL {
 					int int2 = ((Integer) tos.getValue()).intValue();
 					switch (opr) {
 					case 10:
-						dataStack.push(new Data(Data.BOOL, new Boolean(
+						dataStack.push(new Data(Data.BOOL, Boolean.valueOf(
 								int1 == int2)));
 						break;
 					case 11:
-						dataStack.push(new Data(Data.BOOL, new Boolean(
+						dataStack.push(new Data(Data.BOOL, Boolean.valueOf(
 								int1 != int2)));
 						break;
 					case 12:
-						dataStack.push(new Data(Data.BOOL, new Boolean(
+						dataStack.push(new Data(Data.BOOL, Boolean.valueOf(
 								int1 < int2)));
 						break;
 					case 13:
-						dataStack.push(new Data(Data.BOOL, new Boolean(
+						dataStack.push(new Data(Data.BOOL, Boolean.valueOf(
 								int1 >= int2)));
 						break;
 					case 14:
-						dataStack.push(new Data(Data.BOOL, new Boolean(
+						dataStack.push(new Data(Data.BOOL, Boolean.valueOf(
 								int1 > int2)));
 						break;
 					case 15:
-						dataStack.push(new Data(Data.BOOL, new Boolean(
+						dataStack.push(new Data(Data.BOOL, Boolean.valueOf(
 								int1 <= int2)));
 						break;
 					default:
@@ -869,27 +868,27 @@ public class PAL {
 					float flt2 = ((Float) tos.getValue()).floatValue();
 					switch (opr) {
 					case 10:
-						dataStack.push(new Data(Data.BOOL, new Boolean(
+						dataStack.push(new Data(Data.BOOL, Boolean.valueOf(
 								flt1 == flt2)));
 						break;
 					case 11:
-						dataStack.push(new Data(Data.BOOL, new Boolean(
+						dataStack.push(new Data(Data.BOOL, Boolean.valueOf(
 								flt1 != flt2)));
 						break;
 					case 12:
-						dataStack.push(new Data(Data.BOOL, new Boolean(
+						dataStack.push(new Data(Data.BOOL, Boolean.valueOf(
 								flt1 < flt2)));
 						break;
 					case 13:
-						dataStack.push(new Data(Data.BOOL, new Boolean(
+						dataStack.push(new Data(Data.BOOL, Boolean.valueOf(
 								flt1 >= flt2)));
 						break;
 					case 14:
-						dataStack.push(new Data(Data.BOOL, new Boolean(
+						dataStack.push(new Data(Data.BOOL, Boolean.valueOf(
 								flt1 > flt2)));
 						break;
 					case 15:
-						dataStack.push(new Data(Data.BOOL, new Boolean(
+						dataStack.push(new Data(Data.BOOL, Boolean.valueOf(
 								flt1 <= flt2)));
 						break;
 					default:
@@ -909,17 +908,17 @@ public class PAL {
 			}
 
 			boolean bResult = !((Boolean) tos.getValue()).booleanValue();
-			dataStack.push(new Data(Data.BOOL, new Boolean(bResult)));
+			dataStack.push(new Data(Data.BOOL, Boolean.valueOf(bResult)));
 			break;
 		case 17:
 			// Push boolean true on TOS.
 
-			dataStack.push(new Data(Data.BOOL, new Boolean(true)));
+			dataStack.push(new Data(Data.BOOL, Boolean.valueOf(true)));
 			break;
 		case 18:
 			// Push boolean false on TOS
 
-			dataStack.push(new Data(Data.BOOL, new Boolean(false)));
+			dataStack.push(new Data(Data.BOOL, Boolean.valueOf(false)));
 			break;
 		case 19:
 			// Test for EOF.
@@ -927,9 +926,9 @@ public class PAL {
 			try {
 				int nextByte = pushBack.read();
 				if (nextByte == -1) {
-					dataStack.push(new Data(Data.BOOL, new Boolean(true)));
+					dataStack.push(new Data(Data.BOOL, Boolean.valueOf(true)));
 				} else {
-					dataStack.push(new Data(Data.BOOL, new Boolean(false)));
+					dataStack.push(new Data(Data.BOOL, Boolean.valueOf(false)));
 					pushBack.unread(nextByte);
 				}
 			} catch (IOException e) {
@@ -982,7 +981,7 @@ public class PAL {
 				return ExitStatus.ABNORMAL;
 			}
 			float fAns = ((Integer) dataStack.pop().getValue()).floatValue();
-			dataStack.push(new Data(Data.REAL, new Float(fAns)));
+			dataStack.push(new Data(Data.REAL, Float.valueOf(fAns)));
 			break;
 		case 26:
 			// Convert the real at TOS to an integer.
@@ -993,7 +992,7 @@ public class PAL {
 				return ExitStatus.ABNORMAL;
 			}
 			int iResult = ((Float) dataStack.pop().getValue()).intValue();
-			dataStack.push(new Data(Data.INT, new Integer(iResult)));
+			dataStack.push(new Data(Data.INT, Integer.valueOf(iResult)));
 			break;
 		case 27:
 			// Convert the integer at TOS to a string.
@@ -1031,7 +1030,7 @@ public class PAL {
 			}
 			boolean bool1 = ((Boolean) tos.getValue()).booleanValue();
 			boolean bool2 = ((Boolean) ntos.getValue()).booleanValue();
-			dataStack.push(new Data(Data.BOOL, new Boolean(bool1 && bool2)));
+			dataStack.push(new Data(Data.BOOL, Boolean.valueOf(bool1 && bool2)));
 			break;
 		case 30:
 			// Logical or of two booleans.
@@ -1047,7 +1046,7 @@ public class PAL {
 			}
 			bool1 = ((Boolean) tos.getValue()).booleanValue();
 			bool2 = ((Boolean) ntos.getValue()).booleanValue();
-			dataStack.push(new Data(Data.BOOL, new Boolean(bool1 || bool2)));
+			dataStack.push(new Data(Data.BOOL, Boolean.valueOf(bool1 || bool2)));
 			break;
 		case 31:
 			// Test whether the current exception code is the same as
@@ -1064,7 +1063,7 @@ public class PAL {
 			int testValue = ((Integer) tos.getValue()).intValue();
 			boolean pushValue = testValue == currentException;
 
-			dataStack.push(new Data(Data.BOOL, new Boolean(pushValue)));
+			dataStack.push(new Data(Data.BOOL, Boolean.valueOf(pushValue)));
 			break;
 		default:
 			System.out.println("OPR " + opr + ": not implemented.");
@@ -1090,11 +1089,11 @@ public class PAL {
 		// We are expecting an integer, real or string.
 		Object output;
 		try {
-			output = new Integer(input);
+			output = Integer.valueOf(input);
 			return output;
 		} catch (NumberFormatException e1) {
 			try {
-				output = new Float(input);
+				output = Float.valueOf(input);
 				return output;
 			} catch (NumberFormatException e2) {
 				return input;
